cmake: Fix uninitialized member in HandleDeleteCacheVariables

If there is no existing value, mark the saved entry as UNINITIALIZED
(avoids compiler warning about uninitialized type).

Issue: #21166